# linto-studio-plugins

./: .envdefault  .envdefault.docker  .envdefault.linto.docker  .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  Jenkinsfile  LICENCE-REPORT.csv  LICENCE-REPORT.sh  MIGRATION.md  Makefile  README.md  RELEASE.md  compose.linto-studio.override.yml  compose.linto-studio.yml  compose.override.yml  compose.prod.yml  compose.test.yml  compose.yml  convert.sh  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml  integration-test-ci.sh  integration-test.sh  notice.txt  package-lock.json  package.json
BotService/: Dockerfile  botservice.js  docker-entrypoint.sh  healthcheck.sh  package-lock.json  package.json
Delivery/: README.md  (+5 more)
TranslatorPython/: .envdefault  .gitignore  Dockerfile  README.md  pyproject.toml
TranslatorPython/benchmark/: README.md  banner_sim.py  corpus.py  pacer_replay.py  replay_capture.py  run_latency.py  run_quality.py
TranslatorPython/benchmark/results/: BENCHMARK_REPORT.md  latency_results.csv  latency_results.md  quality_results.csv  quality_results.md
TranslatorPython/tests/: test_assembler.py  test_change_gate.py  test_mqtt_contract.py  test_pacer.py  test_pipeline.py  test_scheduler.py  test_sentence_gate.py  test_stability_gate.py
TranslatorPython/translator/: assembler.py  config.py  main.py  mqtt_handler.py  pacer.py  pipeline.py  scheduler.py
TranslatorPython/translator/gates/: change_gate.py  sentence_gate.py  stability_gate.py
TranslatorPython/translator/providers/: __init__.py  base.py  echo.py  translategemma.py
(+590 files in other folders)
